# token-swap-program

./: ADVANCED_TEST_SCENARIOS.md  ANCHOR_VS_PINOCCHIO.md  Anchor.toml  CU_BENCHMARK.md  Cargo.toml  PINOCCHIO_MIGRATION.md  PINOCCHIO_STATUS.md  PROGRAM_INTERFACE.md  README.md  TESTING_GUIDE.md  TEST_COVERAGE.md  findings.md  progress.md  task_plan.md
app/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
app/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
app/src/components/: admin-panel.tsx  app-shell.tsx  create-group-page.tsx  docs-page.tsx  group-detail-page.tsx  group-list-page.tsx  network-selector.tsx  swap-panel.tsx  transaction-status.tsx  wallet-panel.tsx
app/src/lib/: format.ts  networks.ts  protocol.ts  runtime.tsx  token-accounts.ts
app/src/types/: shims.d.ts
pinocchio-example/: Cargo.toml
pinocchio-example/src/: error.rs  lib.rs  state.rs  utils.rs
pinocchio-example/src/instructions/: close_group.rs  create_group.rs  deposit.rs  mod.rs  set_status.rs  swap.rs  swap_reverse.rs  transfer_admin.rs  update_config.rs  withdraw.rs
programs/token-swap-program/: Cargo.toml
programs/token-swap-program/src/: error.rs  (+2 more)
sdk/: README.md  package.json  tsconfig.json
sdk/scripts/: _helpers.mjs  localnet-admin-lifecycle.mjs  localnet-run-all.mjs  localnet-token2022-flow.mjs  localnet-user-flow.mjs
sdk/src/: client.ts  constants.ts  group-id.ts  idl.ts  index.ts  math.ts  pda.ts  types.ts
tests/: decimals-edge-cases.ts  decimals-matrix.ts  security-tests.ts  token-2022-cross-program.ts  token-swap-program.ts
(+25 files in other folders)
