[package]
name = "token-swap-pinocchio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "=0.6.0"
pinocchio-token = "=0.1.0"
pinocchio-system = "=0.1.3"
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }

[dev-dependencies]
solana-program-test = "2.0"
solana-sdk = "2.0"
